# StudentManagementSystem

./: .gitignore  CMakeLists.txt  LICENSE  Presentation.html  Presentation.md  README.md  SECURITY.md  Submission_Data.txt  main.c  quality.md
